src/client/components/organisms/results/results.scss
.resultContainerWithPagination {
  max-height: calc(100% - 80px);
  pointer-events: all;
}
.centerContainer {
  @include grid-media($sba-grid-large) {
    position: absolute;
    bottom: 0px;
    top: 40px;
    right: 0px;
    left: 0px;
    pointer-events: none;
  }
}
.resultsWithPagination {
  @include grid-media($sba-grid-large) {
    bottom: 66px;
  }
}

.resultsWithSearchInfo {
  @include grid-media($sba-grid-large) {
    top: 0px;
  }
}

.resultContainer {
  background-color: white;
  min-width: 321px;
  @include grid-media($sba-grid-large) {
    position: absolute;
    pointer-events: all;
  }
}

.scroll {
  overflow-y: scroll;
}

.searchInfoPanel {
  background-color: white;
  padding: 14px 20px 0;
  @include grid-media($sba-grid-small) {
    padding-bottom: 20px;
  }
}

.searchFocusState:focus {
  outline: 2px dotted #c5c5c5;
  outline-offset: 3px;
}

.paginator {
  text-align: right;
  padding: 15px;
  background-color: white;
  @include grid-media($sba-grid-large) {
    position: absolute;
    bottom: 0px;
    left: 0px;
    right: 0px;
  }
}

